#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-71
2016-04-27 Mikhail S. Dubrovin
- GeometryObject.py change format for angles from %6.1f to %8.3f and test in GeometryAccess
	
Tag: V00-02-70
2016-04-25 Mikhail S. Dubrovin
- in NDArrIO.save_txt add SHAPE and DATATYPE.
	
Tag: V00-02-69
2016-04-14 Mikhail S. Dubrovin
- CalibParsBaseEpix100aV1 - change default common mode parameters from (4,1,20,0) to (4,6,30,30) PSAS-147

Tag: V00-02-68
2016-03-31 Mikhail S. Dubrovin
- GlobalUtils.py - use different methods inside get_login() and get_hostname()

Tag: V00-02-67
2016-03-31 Mikhail S. Dubrovin
- GlobalUtils.py, NDArrIO.py - get rid of calls to get_enviroment(...)

Tag: V00-02-66
2016-03-17 Mikhail S. Dubrovin
- NDArrIO.py - add parameter "addmetad" to save_txt

Tag: V00-02-65
2015-03-05 Mikhail S. Dubrovin
- GeometryObject.py add protection for wrong size and shape 
	in two2x1ToData2x2 and data2x2ToTwo2x1
	
Tag: V00-02-64
2015-02-25 Mikhail S. Dubrovin
- NDArrIO.py - cosmetic improvement in print statement.
	
Tag: V00-02-63
2015-02-22 Mikhail S. Dubrovin
- Support of geometry for matrix-sensors of variable shape. 
	Assuming that sensor name contains paramaters, ex: MTRX:512:512:54:54
- CalibParsBaseAndor3dV1.py - set rows=cols=0 - for variable size arrays
- GenericCalibPars.py - switch to NDArrIO.load_txt in stead of np.loadtxt
- SegGeometryMatrixV1.py - Remove singleton seg_andor3d, addn method matrix_pars(segname)
- SegGeometryStore.py use MTRX:512:512:54:54 in stead of ANDOR3D:V1

Tag: V00-02-62
2015-02-19 Mikhail S. Dubrovin
- add NDArrIO.py, in GlobalUtils.py add str_tstamp, get_enviroment.